
By: smueller on 2007/07/20
    * Remove shebang from Makefile.PL. No assumptions about the user's perl.
    * Port Makefile.PL to use ExtUtils::MakeMaker so I no longer need to
      release for Module::Install upgrades. PAR::Dist wasn't using any of
      the advanced features anyway!
    * This is 0.24.
____________________________________________________________________________
By: smueller on 2007/06/20
    * Add contains_binaries.
    * This is 0.23
____________________________________________________________________________
By: smueller on 2007/04/30
    * Patch from Jos Boumans: Remove use of "static" variable.
____________________________________________________________________________
By: smueller on 2006/10/28
    * parse_dist_name now supports versions starting with a 'v'.
____________________________________________________________________________
By: smueller on 2006/10/12
    * _install_or_uninstall tries to remove the temporary directory
      while cwd() is in that directory. That fails on win32 leaving
      temporary directories on disk. This is now fixed.
    * This is 0.21
____________________________________________________________________________
By: smueller on 2006/10/11
    * Added a more flexible way of using PAR::Dist::install_par's
      custom target logic.
    * This is 0.20
____________________________________________________________________________
By: smueller on 2006/10/02
    * Repaired PAR::Dist::install_par's custom target logic.
____________________________________________________________________________
By: smueller on 2006/09/03
Log:
    * It's not possible to specify your own installation paths.
    * Installation paths now documented.
    * This is 0.19.
____________________________________________________________________________
By: smueller on 2006/08/28
Log:
    * Added optional POD tests.
____________________________________________________________________________
By: smueller on 2006/08/25
Log: